ontol/ontol-compiler/test-cases/error/fmt/invalid_syntax.on
fmt () => () () // ERROR parse error: found `(`, expected one of `def`, `rel`, `fmt`, `map`, `=>`
